# geokapti

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: celery_app.py  db.py  enums.py  logger.py  main.py  models.py
app/routes/: distance.py  location.py
tests/: test_register_location.py
